--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 
 <div id="Categories">
 <h3>Categories</h3>
-<ol>Success stories</ol>
-<ol>Stats</ol>
-<ol>How tos</ol>
-<ol>Best of</ol>
-<ol>Business tips</ol>
+<li>Success stories</li>
+<li>Stats</li>
+<li>How tos</li>
+<li>Best of</li>
+<li>Business tips</li>
 		</div>
 	<div id="About Relaxr"> </div>
 	<div id="Ad Unit"></div>
 </div>
-<div id= "Footer">
+
 			<footer>
 				&copy; Footer Goes Here
 			</footer>
-</div>
+
 		<!-- #container -->
 	</body>
 </html>
