--- a/index.html
+++ b/index.html
@@ -9,69 +9,56 @@
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="./style.css">
 
 	</head>
 	<body>
 		<header>
-	       <div class="container">
-                <h1 class="logo">Relaxr</h1>
-           <div class="NavigationBar">
-                <nav>     
-                    <ul>
-                        <li><a href="./about.html">About</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Blog</a></li>
-                    </ul>
-                </nav>
-            </div>
-            </div>
+	        <h1>Relaxr</h1>
+	        <nav>     
+	            <ul>
+	                <li><a href="./about.html">About</a></li>
+	                <li><a href="#">FAQ</a></li>
+	                <li><a href="#">Team</a></li>
+	                <li><a href="#">Contact Us</a></li>
+	                <li><a href="#">Blog</a></li>
+	            </ul>
+	        </nav>
         </header>
 
-<div id="container">
+		<div id="container">
+			<div id="Article1">
+				<h2>"How I implemented Relaxr in 2 weeks and changed my life."</h2>
+				<img src="./blog_photo1.jpg" style="display: block; margin:0 auto;left;width: 100%">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
+			    <div class="Read">"Read More"</div>
+			</div>
 
-<h2>"How I implemented Relaxr in 2 weeks and changed my life."</h2>
-<img src="./blog_photo1.jpg" style="display: block; margin:0 auto;left;width: 100%">
-<div id="Content">	
-	<div id="Article1">    
-	
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
-
-       </div>
-     
-     
-     <div class="Read">"Read More"</div>
-<img src="./blog_photo2.jpg" style="display: block; margin:0 auto;left;width: 100%">
-	<div id="Article2">
-     <h3>"I traveled across the globe thanks to Relaxr’s Excel automation"</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
-
-	</div>
-	<div class="Read">Read More</div>
-</div>
-	
-</div>
-	
-<div id="Sidebar">
-
-<div id="Categories">
-<h3>Categories</h3>
-<ol>Success stories</ol>
-<ol>Stats</ol>
-<ol>How tos</ol>
-<ol>Best of</ol>
-<ol>Business tips</ol>
+			<div id="Article2">
+				<img src="./blog_photo2.jpg" style="display: block; margin:0 auto;left;width: 100%">
+				<h3>"I traveled across the globe thanks to Relaxr’s Excel automation"</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
+				<div class="Read">Read More</div>
+			</div>			
 		</div>
-	<div id="About Relaxr"> </div>
-	<div id="Ad Unit"></div>
-</div>
-<div id= "Footer">
-			<footer>
-				&copy; Footer Goes Here
-			</footer>
-</div>
+	
+		<div id="Sidebar">
+			<div id="Categories">
+				<h3>Categories</h3>
+				<ol>
+					<li>Success stories</li>
+					<li>Stats</li>
+					<li>How tos</li>
+					<li>Best of</li>
+					<li>Business tips</li>
+				</ol>
+			</div>
+			<div id="About Relaxr"> </div>
+			<div id="Ad Unit"></div>
+		</div>
+		<footer>
+		&copy; Footer Goes Here
+		</footer>
 		<!-- #container -->
 	</body>
 </html>
