--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>Blank Template</title>
 
 		<!-- external CSS link -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,100,300,600,800,900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="./style.css">
 
@@ -17,7 +18,7 @@
 	        <h1>Relaxr</h1>
 	        <nav>     
 	            <ul>
-	                <li><a href="./about.html">About</a></li>
+	                <li><a href=" index.html" style="color: #f9e42e;">About</a></li>
 	                <li><a href="#">FAQ</a></li>
 	                <li><a href="#">Team</a></li>
 	                <li><a href="#">Contact Us</a></li>
@@ -28,36 +29,48 @@
 
 		<div id="container">
 			<div id="Article1">
-				<h2>"How I implemented Relaxr in 2 weeks and changed my life."</h2>
-				<img src="./blog_photo1.jpg" style="display: block; margin:0 auto;left;width: 100%">
+				<h2>How I implemented Relaxr in 2 weeks and changed my life.</h2>
+				<h9><img src="./blog_photo1.jpg" style="display: block; margin:0 auto;left;width: 100%"></h9>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
-			    <div class="Read">"Read More"</div>
+			    <div class="Read"><a href="./about.html">Read More ></a></div>
 			</div>
 
 			<div id="Article2">
-				<img src="./blog_photo2.jpg" style="display: block; margin:0 auto;left;width: 100%">
-				<h3>"I traveled across the globe thanks to Relaxr’s Excel automation"</h3>
+
+				<h3>I traveled across the globe thanks to Relaxr’s Excel automation</h3>
+				<h8><img src="./blog_photo2.jpg" style="display: block; margin:0 auto;left;width: 100%"></h8>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce varius augue nec metus viverra interdum. Sed in gravida lectus. Pellentesque habitant morbi tristique senectus et netu et malesuada fames ac turpis egestas. Mauris ut vulputate nisl.  Maecenas quis auctor dui. Ut porta aliquam lorem, at volutpat orci commodo a. Suspendisse nunc orci, porttitor ac sapien a, rutrum porttitor odio. Phasellus faucibus tristique orci eget dictum. Proin tincidunt vehicula leo sed mattis. Nunc faucibus augue a pellentesque tristique. Proin suscipit in dui ut convallis.</p>
-				<div class="Read">Read More</div>
+				<div class="Read"><a href="./about.html">Read More ></a></div>
 			</div>			
 		</div>
 	
 		<div id="Sidebar">
-			<div id="Categories">
-				<h3>Categories</h3>
+				<h4>Categories</h4>
 				<ol>
-					<li>Success stories</li>
-					<li>Stats</li>
-					<li>How tos</li>
-					<li>Best of</li>
-					<li>Business tips</li>
+					<li><a href="./about.html">Success stories</a></li>
+					<li><a href="#">Stats</a></li>
+					<li><a href="#">How tos</a></li>
+					<li><a href="#">Best of</a></li>
+					<li><a href="#">Business tips</a></li>
 				</ol>
-			</div>
-			<div id="About Relaxr"> </div>
-			<div id="Ad Unit"></div>
+				<h5>About Relaxr</h5>
+				Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.
+				<h6><a href="./about.html">Learn More</a></h6>
+				<img src="./images/ad-unit.png" style="display: block; margin:0 auto;left;width: 100%">
+
+				</div>
+			 </div>
+			
 		</div>
+	
 		<footer>
-		&copy; Footer Goes Here
+		<div class="signup">
+		<a class="button" href="#"> Sign Up Now!</a>
+		</div>
+		<h5>Relaxr</h5>
+		<a href="#"><img src="images/twitter.png" alt="Twitter logo"></a>
+		<a href="#"><img src="images/facebook.png" alt="Facebook logo"></a>
+		<p> Copyright 2015 Relaxr, Inc.</p>
 		</footer>
 		<!-- #container -->
 	</body>
