--- a/week3/index.html
+++ b/week3/index.html
@@ -12,31 +12,10 @@
 
 		<!-- jQuery -->
 	  	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script>
-			$( function() {
-				$( "#dialog" ).dialog({
-				  autoOpen: false,
-				  show: {
-				    effect: "blind",
-				    duration: 1000
-				  },
-				  hide: {
-				    effect: "explode",
-				    duration: 1000
-				  }
-				});
-
-				$( "#opener" ).on( "click", function(e) {
-					e.preventDefault();
-				  $( "#dialog" ).dialog( "open" );
-				});
-			} );
-		</script>
-
-		<link rel="stylesheet" href="./style.css">
+			<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+			<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+			
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header>
@@ -113,6 +92,6 @@
 		<div id="dialog" title="Basic dialog">
 		  <p>Windows 98 called and wants it's dialog box back.</p>
 		</div>
-		<script src="index.js"></script>
+		<script src="./index.js"></script>
 	</body>
 </html>
