--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<html>
+<DOCTYPE html>
 
-<head>
-  <title>Rock, Paper, Scissors</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-</head>
+	<head>
 
-<body>
-    Music Website
-    <script src="js/index.js"></script>
-</body>
+	<title> KAZOOT!</title>
+	<link rel="stylesheet" href="css/style.css">
 
-</html>
+	</head>
+
+	<body>
+		<div id="container">
+			<header>
+
+			<caption>
+			"Kazoot- the fantastical tune producer"
+			</caption>
+	
+			</header>
+			<div id="images">
+					hi
+
+			</div>
+
+			<footer>
+			hi
+			</footer>
+		</div>
+
+	</body>
